--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
   padding: 0;
   margin: 0;
@@ -5,7 +9,7 @@
   font-size: 100%;
 }
 
-.main-container {
+/* .main-container {
   display: flex;
   flex-direction: column;
   height: 100vh;
@@ -13,4 +17,4 @@
 
 .container {
   height: 100%;
-}
+} */
